@@ -1,3 +1,8 @@
+2009-08-11  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/41022
+	* gfortran.dg/proc_ptr_comp_14.f90: New.
+
 2009-08-11  Adam Nemet  <anemet@caviumnetworks.com>
 
 	* gcc.target/mips/ext-5.c: New test.
